--- a/.github/workflows/dotnetapp.yml
+++ b/.github/workflows/dotnetapp.yml
@@ -1,4 +1,4 @@
-name: dotnet Application
+name: Build CI
 
 on:
   push:
@@ -10,7 +10,6 @@ jobs:
   build:
     runs-on: ${{ matrix.os }}
     strategy:
-      max-parallel: 1
       matrix:
         os: [windows-latest, macos-latest]
 
