--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@ Amazon.QLDB.DMVSample/bin/*
 Amazon.QLDB.DMVSample/obj/*
 Amazon.QLDB.DMVSample.Api/bin/*
 Amazon.QLDB.DMVSample.Api/obj/*
+Amazon.QLDB.DMVSample.Api/*.toml
+Amazon.QLDB.DMVSample.Api/.aws-sam/*
 Amazon.QLDB.DMVSample.LedgerSetup/bin/*
 Amazon.QLDB.DMVSample.LedgerSetup/obj/*
 Amazon.QLDB.DMVSample.Model/bin/*
