--- a/Amazon.QLDB.DMVSample.Model/Amazon.QLDB.DMVSample.Model.csproj
+++ b/Amazon.QLDB.DMVSample.Model/Amazon.QLDB.DMVSample.Model.csproj
@@ -1,8 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
-    <RootNamespace>VehicleRegistration.Model</RootNamespace>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
